mobile_style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');

* {
  margin: 0;
  padding: 0;
  font-family: 'Poppins', sans-serif;
  box-sizing: border-box;
}

@media (max-width: 767px) {
  .desktop {
    display: none;
  }

  button:hover {
    cursor: pointer;
    background: #6070ff;
  }

  button:active {
    background: #2230d2;
    transform: translateY(4px);
  }

  button:disabled {
    background: #e5e5e5;
  }

  main {
    width: 100vw;
    background: #e5e5e5;
    display: grid;
    grid-template-columns: 100%;
    grid-template-rows: auto auto auto;
  }

  .intro_page {
    background: #fff;
    border-bottom-left-radius: 60px;
    height: 674px;
  }

  header {
    padding-left: 6.6vw;
    padding-right: 6.6vw;
    padding-top: 14px;
    display: flex;
    padding-bottom: 14px;
    align-items: center;
    justify-content: space-between;
  }

  header a {
    text-decoration: none;
    font-weight: 700;
    font-size: 18px;
    line-height: 20px;
    color: #6070ff;
  }

  .material-symbols-outlined {
    color: #6070ff;
  }

  .background_content {
    background-size: cover;
    background-image: url(./images/header-shapes.svg);
    height: 587px;
    background-repeat: no-repeat;
  }

  .content h1 {
    padding-left: 6.6vw;
    padding-right: 6.6vw;
    padding-top: 114px;
    font-weight: 700;
    font-size: 40px;
    line-height: 52px;
    color: #172b4d;
  }

  .content p {
    padding-left: 6.6vw;
    padding-right: 6.6vw;
    padding-top: 12px;
    padding-bottom: 12px;
    font-weight: 400;
    font-size: 16px;
    line-height: 24px;
    color: #344563;
  }

  .content h2 a {
    padding-left: 6.6vw;
    padding-right: 6.6vw;
    text-decoration: none;
    font-weight: 500;
    font-size: 16px;
    line-height: 24px;
    color: #7f8cff;
  }

  .social-media-icons {
    padding-left: 6.6vw;
    padding-right: 6.6vw;
    padding-top: 12px;
    display: flex;
    align-items: center;
    column-gap: 5.33vw;
  }

  .social-media-icons li {
    list-style: none;
  }

  .Works_Section {
    display: grid;
    grid-template-columns: 80%;
    grid-template-rows: 24% 24% 24% 24%;
  }

  .card {
    display: flex;
    flex-direction: column;
    width: 100vw;
    background: #fff;
    border: 1px solid #dfe1e6;
    border-radius: 4.2%;
    margin-top: 88px;
    margin-bottom: 88px;
    padding-left: 10.6vw;
    padding-right: 10.6vw;
    padding-top: 16px;
  }

  .card_1 {
    height: 552px;
  }

  .card_2 {
    height: 596px;
  }

  .card_3 {
    height: 552px;
  }

  .card_4 {
    height: 596px;
  }

  .card img {
    width: 78.66vw;
    height: 220px;
    border-radius: 2.133%;
    margin-bottom: 16px;
  }

  .card h2 {
    font-weight: 700;
    font-size: 32px;
    line-height: 44px;
    color: #172b4d;
    margin-bottom: 12px;
  }

  .frame ul {
    display: flex;
    column-gap: 3.2vw;
    align-items: center;
    margin-bottom: 12px;
  }

  .frame li {
    list-style: none;
    font-weight: 600;
    font-size: 13px;
    line-height: 16px;
    color: #7a869a;
  }

  .separator {
    width: 6px;
    height: 6px;
    border-radius: 16px;
    background-color: #c1c7d0;
  }

  .frame .canopy {
    list-style: none;
    font-weight: 600;
    font-size: 13px;
    line-height: 16px;
    color: #344563;
  }

  .card p {
    font-weight: 400;
    font-size: 15px;
    line-height: 24px;
    color: #344563;
    margin-bottom: 12px;
  }

  .tags ul {
    display: flex;
    column-gap: 3.2vw;
    margin-bottom: 12px;
  }

  .categories li {
    list-style: none;
  }

  .social-media-icons_2 li {
    list-style: none;
  }

  .tags ul li {
    list-style: none;
    margin-top: 0;
    padding-top: 0;
  }

  .tags button {
    font-weight: 500;
    font-size: 12px;
    line-height: 16px;
    letter-spacing: 0.03em;
    color: #6070ff;
    border-radius: 8px;
    background: #ebebff;
    border: none;
    padding: 8px 15px 8px 15px;
  }

  .see_project_button button {
    font-weight: 500;
    font-size: 17px;
    line-height: 24px;
    letter-spacing: 0.03em;
    color: #396df2;
    padding: 12px;
    border: 1px solid #6070ff;
    border-radius: 8px;
  }

  .content_2 {
    height: 674px;
    background: #fff;
    border-top-right-radius: 60px;
    padding-left: 6.4vw;
    padding-right: 6.4vw;
  }

  .content_2 h2 {
    padding-top: 114px;
    font-weight: 700;
    font-size: 40px;
    line-height: 52px;
    color: #172b4d;
  }

  .content_2 p {
    padding-top: 12px;
    padding-bottom: 12px;
    font-weight: 400;
    font-size: 16px;
    line-height: 24px;
    color: #344563;
  }

  .content_2 h2 a {
    text-decoration: none;
    font-weight: 500;
    font-size: 16px;
    line-height: 24px;
    color: #7f8cff;
  }

  .social-media-icons_2 {
    padding-right: 6.6vw;
    padding-top: 12px;
    display: flex;
    align-items: center;
    column-gap: 5.33vw;
  }

  .resume_button button {
    font-weight: 500;
    font-size: 17px;
    line-height: 24px;
    letter-spacing: 0.03em;
    color: #396df2;
    margin-top: 12px;
    border: 1px solid #6070ff;
    border-radius: 8px;
    width: 162px;
    height: 48px;
  }

  .categories ul {
    display: flex;
    flex-direction: column;
    margin-left: 12px;
    margin-right: 12px;
    height: 600px;
  }

  .box {
    display: flex;
    height: 66.72px;
    background: #f7f7f9;
    border-radius: 8px;
    margin: 12px 0 12px 0;
    align-items: center;
    padding: 9px 0 9px 3.73vw;
    column-gap: 16px;
  }

  .categories ul li {
    display: flex;
    justify-content: space-between;
    font-weight: 500;
    font-size: 20px;
    line-height: 24px;
    padding: 23px 12px 23px 0;
    align-items: center;
  }

  .frameworks {
    border-bottom: solid 1px #dfe1e6;
    align-items: center;
  }

  .skills {
    border-bottom: solid 1px #dfe1e6;
  }

  .arrow {
    background-color: transparent;
    border: none;
    border-radius: 40px;
    width: 20px;
    height: 20px;
  }

  .background button {
    background: #fff;
    border-radius: 8px;
    padding: 12px 16px;
    margin-left: 24px;
    margin-top: 10px;
    border: none;
    letter-spacing: 0.03em;
    color: #6070ff;
    font-weight: 500;
    font-size: 17px;
    line-height: 24px;
    width: 145px;
  }

  .categories button:hover {
    cursor: pointer;
    background: none;
  }

  .categories button:active {
    background: none;
    transform: translateY(4px);
  }

  .categories button:disabled {
    background: none;
  }

  .contact_form {
    margin-top: 150px;
  }

  .background {
    display: flex;
    flex-direction: column;
    margin-top: 500px;
    height: 779px;
    background: #6070ff;
    background-position: 153px;
    background-image: url(./images/contactform.svg);
    border-top-left-radius: 60px;
    background-repeat: no-repeat;
  }

  .background h2 {
    text-align: center;
    padding-top: 103px;
    font-weight: 700;
    font-size: 40px;
    line-height: 52px;
    color: #fff;
    margin-bottom: 12px;
  }

  .background p {
    font-weight: 400;
    font-size: 20px;
    line-height: 28px;
    color: #ebebff;
    text-align: center;
    margin: 0 24px 24px 24px;
  }

  form {
    display: flex;
    flex-direction: column;
  }

  .field {
    background: #fff;
    border: 1px solid #cfd8dc;
    border-radius: 8px;
    padding: 15px 16px 15px 16px;
    font-weight: 400;
    font-size: 17px;
    line-height: 20px;
    margin: 10px 24px 10px 24px;
    width: 86.6vw;
  }

  .field3 {
    background: #fff;
    border: 1px solid #cfd8dc;
    border-radius: 8px;
    padding: 15px 16px 15px 16px;
    font-weight: 400;
    font-size: 17px;
    line-height: 20px;
    margin: 10px 24px 5px 24px;
    width: 86.6vw;
    height: 170px;
  }

  .home_indicator {
    display: flex;
    justify-content: center;
    margin-top: 48px;
  }
}

